[tool.poetry]
name = "django-aloe-bdd"
version = "0.1.0"
description = ""
authors = ["Mathéo <matheobalens@gmail.com>"]
readme = "README.md"
packages = [{include = "django_aloe_bdd"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.2.0"
bandit = "^1.7.4"
coverage = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
